force-app/main/default/objects/Asset/fields/vxLot_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>vxLot_Expiry_Date__c</fullName>
    <description>Expiry Date of the Vaccine</description>
    <inlineHelpText>Expiry Date of the Vaccine</inlineHelpText>
    <label>Lot Expiry Date</label>
    <type>Date</type>
</CustomField>