force-app/main/default/objects/Asset/fields/vxLot_Number__c.field-meta.xml
<CustomField>
    <fullName>vxLot_Number__c</fullName>
    <description>Manufacturers Vaccine Batch/Lot Number</description>
    <externalId>true</externalId>
    <inlineHelpText>Manufacturers Vaccine Batch/Lot Number</inlineHelpText>
    <label>Lot Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>