force-app/main/default/objects/Asset/fields/vxLot_Number_Summary__c.field-meta.xml
<CustomField>
    <fullName>vxLot_Number_Summary__c</fullName>
    <description>Used to display a summary of the Lot/Batch record on the Vaccination Admin Flow</description>
    <formula>vxLot_Number__c &amp; &quot; | &quot; &amp; TEXT(vxLot_Expiry_Date__c)  &amp; &quot; | &quot;  &amp; TEXT(Status)</formula>
    <label>Lot Number Summary</label>
    <type>Text</type>
</CustomField>