force-app/main/default/objects/Asset/recordTypes/Vaccine.recordType-meta.xml
<RecordType>
    <fullName>Vaccine</fullName>
    <active>true</active>
    <description>Vaccine Stock Asset</description>
    <label>Vaccine</label>
</RecordType>